Fixes scrollbar stylesheet. Restores window in constructor instead of showEvent, which was a problem, when restoring from minimized mode. Fix: Sets clientModel..

--- a/projects/videoclient/res/default.css
+++ b/projects/videoclient/res/default.css
@@ -48,11 +48,11 @@ TileViewWidget QLabel#bandwidthWrite {
   qproperty-alignment: AlignCenter;
 }
 
-TileViewWidget QScrollBar {
+TileViewWidget > QScrollBar {
   background: rgb(30, 30, 30);
 }
 
-TileViewWidget QScrollBar:vertical {
+TileViewWidget > QScrollBar:vertical {
   width: 10px;
 }
 
